--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^1.14.12",
     "react": "^16.5.2",
     "react-dom": "^16.2.0",
+    "react-material-ui-form-validator": "^2.0.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "superagent": "^4.0.0-beta.5",
